welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(!estFaceMur()){
	if(getDirection() = Direction.WEST && 
	   !estSurBiscuit())
	avance();
}
